<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">PLease enter your name</string>
    <string name="e_g_rishi">e.g. Rishi</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="go_to_next_question">Go to next Question</string>
    <string name="show_results">Show Results</string>
    <string name="result">Result</string>
</resources>