<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_app"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/textColor"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="22sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_your_name"
                    android:textColor="#343A43"
                    android:layout_marginVertical="20dp"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_g_rishi"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColorHint"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textSize="22sp"
                    android:padding="10dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>

</LinearLayout>